Fixed size on house icon added to avoid "jumping" page.

--- a/sass/_ftrack_overrides.sass
+++ b/sass/_ftrack_overrides.sass
@@ -174,8 +174,12 @@ div[class^='highlight'] pre
     background-color: $section-background-color
 
 a.fa-home
+    height: 27px
     font-size: 26px
     color: $white
+
+    &:before
+        width: 24px
 
 /* --- MEDIA QUERIES --- */
 
